# trackerclassification

./: .gitignore  README.md  RUN_IN_COLAB.ipynb  pyproject.toml
matlab/: GetRotationFromDirectionAndAngle.m  GetRotationFromDirectionAndCosAngle.m  RandomlyPlaceTrackers.m
src/trackerclassification/: main.py
src/trackerclassification/config/: __init__.py  _args.py  _config.py  _constants.py
src/trackerclassification/config/args/: __init__.py  _args.py  _huggingface.py  _model.py  _training.py
src/trackerclassification/config/components/: __init__.py  _base.py  _options.py
src/trackerclassification/config/secrets/: __init__.py  _dotenv.py
src/trackerclassification/dataset/: __init__.py  _collator.py  _dataset.py
src/trackerclassification/dataset/sample/: __init__.py  _sample.py  _visualize.py
src/trackerclassification/dataset/tracker/: __init__.py  _base.py  _camera.py  _code.py  _geometry.py  _pose.py  _tracker.py
src/trackerclassification/model/: __init__.py  _base.py
src/trackerclassification/model/gnn/: __init__.py  _base.py  _dgcnn.py  _sageconv.py
src/trackerclassification/model/set/: __init__.py  _base.py  _deepset.py
src/trackerclassification/training/: __init__.py  _huggingfacehub.py  _metrics.py  _trainer.py
src/trackerclassification/training/trainer/: _graph.py
src/trackerclassification/utils/: __init__.py  _geometry.py  _hf.py  _plotter.py
src/trackerclassification/utils/argparsing/: __init__.py  _args.py  _base.py  _parser.py
src/trackerclassification/utils/logging/: __init__.py  _color.py  _setup.py
(+9 files in other folders)
