[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackerclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "argparse>=1.4.0",
    "editables>=0.5",
    "hatchling>=1.27.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "torch-geometric>=2.7.0",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trackerclassification"]


[project.scripts]
visualize = "trackerclassification.main:Main.visualize"
train = "trackerclassification.main:Main.train"
